Emission volumes get brightened with extra volume samples on GPU + BPT #41693

Closed
opened 2014-09-03 01:26:06 +02:00 by Zauber Paracelsus · 9 comments

System Information
64bit Lubuntu 14.04, kernel 3.13.0-35
AMD Phenom II 970 Quad-Core
GTX 650 Ti, driver 331.20

Blender Version
Broken: 2.72 development build 6891flc, 2014-08-27

Short description of error
When rendering an emission volume with Branched Path Tracing on the GPU, the emission gets brightened when you increase the Volume sample count. This does not happen in CPU mode.

Exact steps for others to reproduce the error

  1. Use the example blend file: VolumeTest.blend
  2. Make sure Device is set to GPU Compute
  3. Render to Slot 1
  4. Go to the Sampling panel to the right, and increase the Volume sample count to something like 2 or 4.
  5. Render to Slot 2
  6. Compare the two renders. The one in Slot 2 will be much brighter.
**System Information** 64bit Lubuntu 14.04, kernel 3.13.0-35 AMD Phenom II 970 Quad-Core GTX 650 Ti, driver 331.20 **Blender Version** Broken: 2.72 development build 6891flc, 2014-08-27 **Short description of error** When rendering an emission volume with Branched Path Tracing on the GPU, the emission gets brightened when you increase the Volume sample count. This does not happen in CPU mode. **Exact steps for others to reproduce the error** 1) Use the example blend file: [VolumeTest.blend](https://archive.blender.org/developer/F108225/VolumeTest.blend) 2) Make sure Device is set to GPU Compute 3) Render to Slot 1 4) Go to the Sampling panel to the right, and increase the Volume sample count to something like 2 or 4. 5) Render to Slot 2 6) Compare the two renders. The one in Slot 2 will be much brighter.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2014-09-03 09:51:29 +02:00

Decoupled ray marching is only implemented on CPU and this causes shading differences between GPU and CPU. It is is a TODO to implement proper decoupled ray marching on GPU, stay tuned!

Decoupled ray marching is only implemented on CPU and this causes shading differences between GPU and CPU. It is is a TODO to implement proper decoupled ray marching on GPU, stay tuned!

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

On the closer look here it seems to be some issues with the GPU code, testing some fixes which seems to be needed here.

On the closer look here it seems to be some issues with the GPU code, testing some fixes which seems to be needed here.

This issue was referenced by f7062ff3ed

This issue was referenced by f7062ff3ed55faa6c40c1de19113746b221a7a8f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f7062ff3ed.

Closed by commit f7062ff3ed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41693
No description provided.