Fix T41693: Volumes get brightened with extra volume samples on GPU + BPT